--- a/css/index.css
+++ b/css/index.css
@@ -229,7 +229,7 @@ ul, li {
   border: 1px solid #DDD;
 }
 
-.cj-ellipsis {
+.cj-ellipsis, #job-seeker_list .job-seeker_item .position {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -534,6 +534,7 @@ ul, li {
 
 #main {
   background-color: #48C0FF;
+  overflow: hidden;
 }
 
 #header {
@@ -847,4 +848,190 @@ ul, li {
   line-height: 46px;
   text-align: center;
   cursor: pointer;
+}
+
+.out_panel_top1,
+.out_panel_bottom2 {
+  width: 1780px;
+  height: 17px;
+  margin: 0 auto;
+  background: linear-gradient(90deg, #2582DD 0%, #439BF1 52.6%, #2582DD 100%);
+}
+
+.out_panel_top2,
+.out_panel_bottom1 {
+  width: 1780px;
+  height: 17px;
+  margin: 0 auto;
+  background: linear-gradient(90deg, #1C74CA 0%, #1D7EDD 52.6%, #1C74CA 100%);
+}
+
+.out_border_2 {
+  border: 17px solid #1D7EDD;
+  border-top: 0;
+  border-bottom: 0;
+}
+
+.out_border_1 {
+  border: 17px solid #439BF1;
+  border-top: 0;
+  border-bottom: 0;
+  width: 1746px;
+  margin: 0 auto;
+}
+
+.out_panel_top1 {
+  position: relative;
+}
+.out_panel_top1:before {
+  content: "";
+  width: 34px;
+  height: 34px;
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: url(../images/outpanel_corner.png) no-repeat center center;
+}
+.out_panel_top1:after {
+  content: "";
+  width: 34px;
+  height: 34px;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transform: rotateY(180deg);
+  background: url(../images/outpanel_corner.png) no-repeat center center;
+}
+
+.out_panel_bottom2 {
+  position: relative;
+}
+.out_panel_bottom2:before {
+  content: "";
+  width: 34px;
+  height: 34px;
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  transform: rotateX(180deg);
+  background: url(../images/outpanel_corner.png) no-repeat center center;
+}
+.out_panel_bottom2:after {
+  content: "";
+  width: 34px;
+  height: 34px;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transform: rotateY(180deg) rotateX(180deg);
+  background: url(../images/outpanel_corner.png) no-repeat center center;
+}
+
+#job-seeker_list {
+  width: 100%;
+  padding: 40px 25px 20px 35px;
+  box-sizing: border-box;
+  background-color: #C4E9FD;
+}
+#job-seeker_list .job-seeker_item {
+  width: 320px;
+  height: 195px;
+  box-sizing: border-box;
+  background: #FFF;
+  border: 3px solid #FFB154;
+  border-radius: 10px;
+  display: inline-block;
+  position: relative;
+  margin: 0 10px 20px 0;
+}
+#job-seeker_list .job-seeker_item.offline {
+  border-color: #99AFCC;
+}
+#job-seeker_list .job-seeker_item.offline .online_status {
+  background: linear-gradient(122.94deg, #B6C7DD 0%, #5F80AC 100%);
+  border-radius: 0px 10px 0px 30px;
+}
+#job-seeker_list .job-seeker_item.offline .chat-now {
+  background: linear-gradient(275.28deg, #ACACAC 0%, #D0D0D0 100%);
+}
+#job-seeker_list .job-seeker_item .avatar {
+  width: 80px;
+  height: 80px;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+#job-seeker_list .job-seeker_item .name {
+  position: absolute;
+  top: 100px;
+  left: 20px;
+  width: 80px;
+  font-size: 14px;
+  line-height: 26px;
+  text-align: center;
+  color: #0082FF;
+}
+#job-seeker_list .job-seeker_item .position {
+  position: absolute;
+  top: 20px;
+  left: 120px;
+  font-size: 16px;
+  line-height: 25px;
+  color: #F23A00;
+  width: 9em;
+}
+#job-seeker_list .job-seeker_item .info {
+  position: absolute;
+  top: 55px;
+  left: 120px;
+  color: #333;
+  font-size: 12px;
+  line-height: 20px;
+}
+#job-seeker_list .job-seeker_item .chat-now {
+  position: absolute;
+  width: 120px;
+  height: 34px;
+  line-height: 34px;
+  text-align: center;
+  left: 25px;
+  top: 141px;
+  color: #FFF;
+  font-size: 16px;
+  font-weight: bold;
+  background: linear-gradient(95.28deg, #FFA41B 0%, #FF5C00 100%);
+  border-radius: 5px;
+  cursor: pointer;
+}
+#job-seeker_list .job-seeker_item .view-resume {
+  position: absolute;
+  width: 120px;
+  height: 34px;
+  left: 175px;
+  top: 141px;
+  color: #FFF;
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 34px;
+  text-align: center;
+  background: linear-gradient(95.28deg, #2E97F9 0%, #0E5FE8 100%);
+  border-radius: 5px;
+  cursor: pointer;
+}
+#job-seeker_list .job-seeker_item .online_status {
+  position: absolute;
+  right: -3px;
+  top: -3px;
+  width: 53px;
+  height: 33px;
+  line-height: 33px;
+  text-indent: 15px;
+  color: #FFF;
+  font-size: 14px;
+  background: linear-gradient(122.94deg, #FFA41B 0%, #FF5C00 100%);
+  border-radius: 0 10px 0 30px;
 }
