--- a/css/index.css
+++ b/css/index.css
@@ -955,6 +955,12 @@ ul, li {
   background: linear-gradient(122.94deg, #B6C7DD 0%, #5F80AC 100%);
   border-radius: 0px 10px 0px 30px;
 }
+#job-seeker_list .job-seeker_item.offline .online_status.online {
+  display: none;
+}
+#job-seeker_list .job-seeker_item.offline .online_status.offline {
+  display: block;
+}
 #job-seeker_list .job-seeker_item.offline .chat-now {
   background: linear-gradient(275.28deg, #ACACAC 0%, #D0D0D0 100%);
 }
@@ -967,7 +973,7 @@ ul, li {
 }
 #job-seeker_list .job-seeker_item .name {
   position: absolute;
-  top: 100px;
+  top: 102px;
   left: 20px;
   width: 80px;
   font-size: 14px;
@@ -1034,4 +1040,10 @@ ul, li {
   font-size: 14px;
   background: linear-gradient(122.94deg, #FFA41B 0%, #FF5C00 100%);
   border-radius: 0 10px 0 30px;
+}
+#job-seeker_list .job-seeker_item .online_status.online {
+  display: block;
+}
+#job-seeker_list .job-seeker_item .online_status.offline {
+  display: none;
 }
