--- a/css/index.scss
+++ b/css/index.scss
@@ -505,7 +505,16 @@
 	  }
 
 	  .chat-now {
+		cursor:default;
 		background: linear-gradient(275.28deg, #ACACAC 0%, #D0D0D0 100%);
+
+		&.online {
+		  display: none;
+		}
+
+		&.offline {
+		  display: block;
+		}
 	  }
 	}
 
@@ -563,6 +572,14 @@
 	  background: linear-gradient(95.28deg, #FFA41B 0%, #FF5C00 100%);
 	  border-radius: 5px;
 	  cursor: pointer;
+
+	  &.online {
+		display: block;
+	  }
+
+	  &.offline {
+		display: none;
+	  }
 	}
 
 	.view-resume {
