--- a/css/index.css
+++ b/css/index.css
@@ -1060,3 +1060,79 @@ ul, li {
 #job-seeker_list .job-seeker_item .online_status.offline {
   display: none;
 }
+
+#company-info .split li {
+  display: inline;
+}
+#company-info .split li:after {
+  color: #C2C2C2;
+}
+#company-info .el-dialog__body {
+  padding: 20px 30px;
+  font-size: 14px;
+  line-height: 2;
+  color: #666;
+}
+#company-info .el-dialog__body .company-info_subtitle {
+  background: url(../images/icon_2dot@2x.png) no-repeat left center;
+  background-size: 14px 10px;
+  text-indent: 22px;
+  font-size: 16px;
+  color: #333;
+  font-weight: bold;
+  margin-top: 20px;
+}
+#company-info .el-dialog__body .company-info_content {
+  font-size: 14px;
+  line-height: 25px;
+  color: #666;
+  padding-left: 22px;
+}
+#company-info .el-dialog__body .company-info_name {
+  font-size: 16px;
+  font-weight: bold;
+  color: #333;
+}
+#company-info .el-dialog__body .company-info_address {
+  background: url(../images/icon_address@2x.png) no-repeat left center;
+  background-size: 18px 18px;
+  text-indent: 22px;
+}
+#company-info .el-dialog__body .company-info-recruit-list .company-info-recruit_item {
+  position: relative;
+  margin-top: 15px;
+  width: 502px;
+  background: #FFF;
+  box-shadow: 0 0 6px 1px rgba(166, 166, 166, 0.25);
+  border-radius: 7px;
+  padding: 20px;
+  box-sizing: border-box;
+  line-height: 2;
+}
+#company-info .el-dialog__body .company-info-recruit-list .company-info-recruit_item:hover {
+  box-shadow: 0 0 6px 1px #1A8CFA;
+}
+#company-info .el-dialog__body .company-info-recruit-list .company-info-recruit_item .job-title {
+  font-size: 14px;
+  font-weight: bold;
+  color: #2C75F1;
+}
+#company-info .el-dialog__body .company-info-recruit-list .company-info-recruit_item .recruit-other-info {
+  color: #666;
+}
+#company-info .el-dialog__body .company-info-recruit-list .company-info-recruit_item .post-resume {
+  position: absolute;
+  width: 76px;
+  height: 28px;
+  right: 20px;
+  top: 20px;
+  background: linear-gradient(93.34deg, #2D95F9 0%, #1062E9 100%);
+  box-shadow: 0 0 6px 1px rgba(166, 166, 166, 0.25);
+  border-radius: 7px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 28px;
+  color: #FFF;
+  cursor: pointer;
+}
