--- a/css/index.css
+++ b/css/index.css
@@ -120,15 +120,15 @@ ul, li {
   float: right;
 }
 
-.cj-flex {
+.cj-flex, #chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #chat-area_panel #chat-message > li.self > .chat-info, #chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #chat-area_panel #chat-message > li > .chat-info, #chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #chat-area_panel #chat-message > li {
   display: flex;
 }
 
-.cj-block {
+.cj-block, #chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #chat-area_panel #chat-message > li > .avatar {
   display: block;
 }
 
-.cj-inline-block {
+.cj-inline-block, #chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #chat-area_panel #chat-message > li > .chat-info > .message {
   display: inline-block;
 }
 
@@ -137,11 +137,11 @@ ul, li {
   margin: 1px;
 }
 
-.cj-flex-wrap {
+.cj-flex-wrap, #chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #chat-area_panel #chat-message > li.self > .chat-info, #chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #chat-area_panel #chat-message > li > .chat-info {
   flex-wrap: wrap;
 }
 
-.cj-flex-nowrap {
+.cj-flex-nowrap, #chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #chat-area_panel #chat-message > li {
   flex-wrap: nowrap;
 }
 
@@ -153,7 +153,7 @@ ul, li {
   justify-content: space-between;
 }
 
-.cj-justify-content-start {
+.cj-justify-content-start, #chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #chat-area_panel #chat-message > li > .chat-info, #chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #chat-area_panel #chat-message > li {
   justify-content: start;
 }
 
@@ -229,7 +229,7 @@ ul, li {
   border: 1px solid #DDD;
 }
 
-.cj-ellipsis, #job-seeker_list .job-seeker_item .position {
+.cj-ellipsis, #chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #chat-area_panel #chat-message > li > .chat-info > .name, #chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #conversations_panel li .nike-name, #job-seeker_list .job-seeker_item .position {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -336,7 +336,7 @@ ul, li {
   width: 1em;
 }
 
-.cj-w100 {
+.cj-w100, #chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #chat-area_panel #chat-message > li > .chat-info > .time, #chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #chat-area_panel #chat-message > li > .chat-info > .name {
   width: 100%;
 }
 
@@ -1061,19 +1061,19 @@ ul, li {
   display: none;
 }
 
-#company-info .split li {
+#company-info .split li, .company-info .split li {
   display: inline;
 }
-#company-info .split li:after {
+#company-info .split li:after, .company-info .split li:after {
   color: #C2C2C2;
 }
-#company-info .el-dialog__body {
+#company-info .el-dialog__body, .company-info .el-dialog__body {
   padding: 20px 30px;
   font-size: 14px;
   line-height: 2;
   color: #666;
 }
-#company-info .el-dialog__body .company-info_subtitle {
+#company-info .company-info_subtitle, .company-info .company-info_subtitle {
   background: url(../images/icon_2dot@2x.png) no-repeat left center;
   background-size: 14px 10px;
   text-indent: 22px;
@@ -1082,23 +1082,23 @@ ul, li {
   font-weight: bold;
   margin-top: 20px;
 }
-#company-info .el-dialog__body .company-info_content {
+#company-info .company-info_content, .company-info .company-info_content {
   font-size: 14px;
   line-height: 25px;
   color: #666;
   padding-left: 22px;
 }
-#company-info .el-dialog__body .company-info_name {
+#company-info .company-info_name, .company-info .company-info_name {
   font-size: 16px;
   font-weight: bold;
   color: #333;
 }
-#company-info .el-dialog__body .company-info_address {
+#company-info .company-info_address, .company-info .company-info_address {
   background: url(../images/icon_address@2x.png) no-repeat left center;
   background-size: 18px 18px;
   text-indent: 22px;
 }
-#company-info .el-dialog__body .company-info-recruit-list .company-info-recruit_item {
+#company-info .company-info-recruit-list .company-info-recruit_item, .company-info .company-info-recruit-list .company-info-recruit_item {
   position: relative;
   margin-top: 15px;
   width: 502px;
@@ -1109,18 +1109,18 @@ ul, li {
   box-sizing: border-box;
   line-height: 2;
 }
-#company-info .el-dialog__body .company-info-recruit-list .company-info-recruit_item:hover {
+#company-info .company-info-recruit-list .company-info-recruit_item:hover, .company-info .company-info-recruit-list .company-info-recruit_item:hover {
   box-shadow: 0 0 6px 1px #1A8CFA;
 }
-#company-info .el-dialog__body .company-info-recruit-list .company-info-recruit_item .job-title {
+#company-info .company-info-recruit-list .company-info-recruit_item .job-title, .company-info .company-info-recruit-list .company-info-recruit_item .job-title {
   font-size: 14px;
   font-weight: bold;
   color: #2C75F1;
 }
-#company-info .el-dialog__body .company-info-recruit-list .company-info-recruit_item .recruit-other-info {
+#company-info .company-info-recruit-list .company-info-recruit_item .recruit-other-info, .company-info .company-info-recruit-list .company-info-recruit_item .recruit-other-info {
   color: #666;
 }
-#company-info .el-dialog__body .company-info-recruit-list .company-info-recruit_item .post-resume {
+#company-info .company-info-recruit-list .company-info-recruit_item .post-resume, .company-info .company-info-recruit-list .company-info-recruit_item .post-resume {
   position: absolute;
   width: 76px;
   height: 28px;
@@ -1168,4 +1168,177 @@ ul, li {
 #login_panel #company_login .login_button {
   background: #4E31FF;
   border-color: rgba(255, 255, 255, 0.5);
+}
+
+#chat-dialog {
+  margin: 0;
+  padding: 0;
+}
+#chat-dialog .el-dialog {
+  min-width: 90vw;
+  height: 75vh;
+  margin: 10vh 100px !important;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  border: 5px solid #0606067D;
+  background: none;
+}
+#chat-dialog .el-dialog .el-dialog__header {
+  background: none;
+  padding: 0;
+  height: 0;
+}
+#chat-dialog .el-dialog .el-dialog__header .el-dialog__headerbtn {
+  top: 10px;
+}
+#chat-dialog .el-dialog .el-dialog__body {
+  flex-grow: 1;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  overflow: hidden;
+  background-color: #FFF;
+}
+#chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel {
+  display: flex;
+  justify-content: space-around;
+  align-items: stretch;
+  overflow: hidden;
+}
+#chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #conversations_panel {
+  width: 390px;
+  overflow: auto;
+}
+#chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #conversations_panel li {
+  height: 48px;
+  line-height: 48px;
+  font-size: 16px;
+  color: #666;
+  box-sizing: border-box;
+  padding: 0 1em;
+  background-size: 28px;
+  border-bottom: 1px solid #EFEFEF;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+#chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #conversations_panel li.active {
+  background-color: #F7F7F7;
+}
+#chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #conversations_panel li .avatar {
+  width: 24px;
+  height: 24px;
+  margin-right: 10px;
+}
+#chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #conversations_panel li .nike-name {
+  flex-grow: 1;
+}
+#chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #conversations_panel li .new {
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  line-height: 24px;
+  text-align: center;
+  background-color: #F00;
+  color: #FFF;
+  border-radius: 50%;
+}
+#chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #chat-area_panel {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  box-sizing: border-box;
+  background: #F5F5F5;
+  box-shadow: inset 1px 1px 5px #DEDEDE;
+}
+#chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #chat-area_panel #chat-message {
+  flex-grow: 1;
+  display: block;
+  overflow: auto;
+  box-sizing: border-box;
+  padding: 10px;
+}
+#chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #chat-area_panel #chat-message > li {
+  margin-top: 1em;
+  align-items: flex-start;
+}
+#chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #chat-area_panel #chat-message > li > .avatar {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #FFF;
+  line-height: 50px;
+  text-align: center;
+  font-size: 22px;
+  margin-right: 5px;
+  flex-shrink: 0;
+  margin-top: 22px;
+}
+#chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #chat-area_panel #chat-message > li > .chat-info > .name {
+  padding-left: 0.5em;
+  padding-bottom: 2px;
+  color: #CCC;
+}
+#chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #chat-area_panel #chat-message > li > .chat-info > .time {
+  color: #CCC;
+  padding-left: 0.5em;
+}
+#chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #chat-area_panel #chat-message > li > .chat-info > .message {
+  width: 218px;
+  background-color: #FFF;
+  border-radius: 11px;
+  padding: 15px;
+}
+#chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #chat-area_panel #chat-message > li.self {
+  flex-direction: row-reverse;
+}
+#chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #chat-area_panel #chat-message > li.self > .avatar {
+  margin-right: 0;
+  margin-left: 5px;
+  background-color: #3080FF;
+  color: #FFF;
+}
+#chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #chat-area_panel #chat-message > li.self > .chat-info {
+  justify-content: flex-end;
+}
+#chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #chat-area_panel #chat-message > li.self > .chat-info > .name {
+  padding-right: 0.5em;
+  text-align: right;
+}
+#chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #chat-area_panel #chat-message > li.self > .chat-info > .message {
+  background-color: #3080FF;
+  color: #FFF;
+}
+#chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #chat-area_panel #chat-message > li.self > .chat-info > .time {
+  text-align: right;
+  padding-right: 5px;
+}
+#chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #chat-area_panel .chat-message_footer {
+  background: #FFF;
+  padding: 5px;
+  box-sizing: border-box;
+  border: 1px solid #DFDFDF;
+  border-top: 0;
+  border-bottom: 0;
+}
+#chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #chat-area_other {
+  width: 600px;
+  display: flex;
+  align-items: stretch;
+}
+#chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #chat-area_other .model {
+  display: none;
+}
+#chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #chat-area_other .model.active {
+  display: block;
+}
+#chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #chat-area_other iframe {
+  width: 100%;
+}
+#chat-dialog .el-dialog .el-dialog__body #chat-dialog_panel #chat-area_other .company-info {
+  padding: 30px;
+  overflow: auto;
 }
