--- a/css/index.css
+++ b/css/index.css
@@ -579,6 +579,33 @@ ul, li {
   height: 532px;
   background: url(../images/banner.png) no-repeat center center;
 }
+#banner #title_panel {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  z-index: 99;
+}
+#banner #title_panel .title {
+  padding-top: 98px;
+  width: 720px;
+  height: 130px;
+  font-weight: bold;
+  font-size: 60px;
+  line-height: 65px;
+  text-align: center;
+  color: #FFF;
+  text-shadow: 0 4px 4px rgba(31, 69, 125, 0.56);
+}
+#banner #title_panel .desc {
+  padding-top: 28px;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 25px;
+  color: #FFF;
+  text-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
+}
 #banner .banner_panel {
   position: absolute;
   bottom: 0;
@@ -586,7 +613,6 @@ ul, li {
   display: block;
   min-width: 900px;
   width: 100%;
-  background-color: #F003;
   padding: 0 118px;
   box-sizing: border-box;
 }
@@ -785,7 +811,6 @@ ul, li {
 #danmu {
   width: 100%;
   height: 300px;
-  background: #F003;
   overflow: hidden;
 }
 
