--- a/css/index.css
+++ b/css/index.css
@@ -1162,9 +1162,13 @@ ul, li {
   cursor: pointer;
 }
 
+#login_panel {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: baseline;
+}
 #login_panel li {
   display: inline-block;
-  margin: 0 22px;
   text-align: center;
 }
 #login_panel li > img {
@@ -1193,6 +1197,94 @@ ul, li {
 #login_panel #company_login .login_button {
   background: #4E31FF;
   border-color: rgba(255, 255, 255, 0.5);
+}
+
+#countdown_panel {
+  width: 274px;
+  height: 165px;
+  background: url(../images/bg_countdown.png) no-repeat center center;
+  background-size: cover;
+  position: relative;
+  margin-top: 10px;
+}
+#countdown_panel > .title {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 25px;
+  color: #C9E5FF;
+  text-shadow: 0 2px 0 rgba(0, 0, 0, 0.25);
+  text-align: center;
+  position: absolute;
+  top: 22px;
+  width: 100%;
+}
+#countdown_panel #countdown_time {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 52px;
+  width: 100%;
+  box-sizing: border-box;
+  padding-left: 10px;
+}
+#countdown_panel #countdown_time .time {
+  display: inline-block;
+  width: 44px;
+  height: 48px;
+  line-height: 48px;
+  background: #2035A5;
+  border-radius: 5px;
+  font-weight: bold;
+  font-size: 36px;
+  color: #B9DDFF;
+  text-align: center;
+}
+#countdown_panel #countdown_time .char {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 25px;
+  margin: 0 6px;
+  color: #C9E5FF;
+  text-shadow: 0 2px 0px rgba(0, 0, 0, 0.25);
+}
+#countdown_panel #goto_panel {
+  position: absolute;
+  top: 108px;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+#countdown_panel #goto_panel #view-invitation-card {
+  display: inline-block;
+  width: 96px;
+  height: 29px;
+  cursor: pointer;
+  background: url(../images/bg_viewinvitaioncard.png) no-repeat center center;
+}
+#countdown_panel #goto_panel #view-invitation-card_long {
+  display: inline-block;
+  width: 130px;
+  height: 28px;
+  cursor: pointer;
+  background: url(../images/bg_viewinvitaioncard_long.png) no-repeat center center;
+}
+#countdown_panel #goto_panel #order-exhibition {
+  display: inline-block;
+  width: 96px;
+  height: 29px;
+  cursor: pointer;
+  background: url(../images/bg_orderexhibition.png) no-repeat center center;
+}
+#countdown_panel #goto_panel #order-exhibition_long {
+  display: inline-block;
+  width: 130px;
+  height: 28px;
+  cursor: pointer;
+  background: url(../images/bg_orderexhibition_long.png) no-repeat center center;
 }
 
 #chat-dialog {
