--- a/css/index.scss
+++ b/css/index.scss
@@ -5,7 +5,6 @@
   overflow: hidden;
 }
 
-
 #header {
   width: 100%;
   height: 40px;
@@ -61,12 +60,12 @@
 	flex-direction: column;
 	align-items: center;
 	width: 100%;
-	z-index:99;
+	z-index: 99;
 
 	.title {
 	  padding-top: 98px;
 	  width: 720px;
-	  height:130px;
+	  height: 130px;
 	  font-weight: bold;
 	  font-size: 60px;
 	  line-height: 65px;
@@ -400,7 +399,7 @@
 	display: block;
 	margin: 0 auto;
 	background: linear-gradient(93.34deg, #2D95F9 0%, #1062E9 100%);
-	box-shadow: 0 0 6px 1px rgb(166 166 166 / 25%);
+	box-shadow: 0 0 6px 1px rgba(166, 166, 166, 25%);
 	border-radius: 7px;
 	font-weight: bold;
 	font-size: 16px;
@@ -410,7 +409,6 @@
 	cursor: pointer;
   }
 }
-
 
 .out_panel_top1,
 .out_panel_bottom2 {
@@ -755,10 +753,14 @@
   }
 }
 
+//登陆区
 #login_panel {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: baseline;
+
   li {
 	display: inline-block;
-	margin: 0 22px;
 	text-align: center;
 
 	> img {
@@ -794,6 +796,105 @@
 	.login_button {
 	  background: #4E31FF;
 	  border-color: rgba(255, 255, 255, 0.5);
+	}
+  }
+}
+
+//倒计时区
+#countdown_panel {
+  width: 274px;
+  height: 165px;
+  background: url(../images/bg_countdown.png) no-repeat center center;
+  background-size: cover;
+  position: relative;
+  margin-top: 10px;
+
+  > .title {
+	font-style: normal;
+	font-weight: bold;
+	font-size: 16px;
+	line-height: 25px;
+	color: #C9E5FF;
+	text-shadow: 0 2px 0 rgba(0, 0, 0, 25%);
+	text-align: center;
+	position: absolute;
+	top: 22px;
+	width: 100%;
+  }
+
+
+  #countdown_time {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	top: 52px;
+	width: 100%;
+	box-sizing: border-box;
+	padding-left: 10px;
+
+	.time {
+	  display: inline-block;
+	  width: 44px;
+	  height: 48px;
+	  line-height: 48px;
+	  background: #2035A5;
+	  border-radius: 5px;
+	  font-weight: bold;
+	  font-size: 36px;
+	  color: #B9DDFF;
+	  text-align: center;
+	}
+
+	.char {
+	  font-weight: bold;
+	  font-size: 14px;
+	  line-height: 25px;
+	  margin: 0 6px;
+	  color: #C9E5FF;
+	  text-shadow: 0 2px 0px rgba(0, 0, 0, 0.25);
+	}
+  }
+
+  #goto_panel {
+	position: absolute;
+	top: 108px;
+	left: 0;
+	width: 100%;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+
+	#view-invitation-card {
+	  display: inline-block;
+	  width: 96px;
+	  height: 29px;
+	  cursor: pointer;
+	  background: url(../images/bg_viewinvitaioncard.png) no-repeat center center;
+	}
+
+	#view-invitation-card_long {
+	  display: inline-block;
+	  width: 130px;
+	  height: 28px;
+	  cursor: pointer;
+	  background: url(../images/bg_viewinvitaioncard_long.png) no-repeat center center;
+	}
+
+	#order-exhibition {
+	  display: inline-block;
+	  width: 96px;
+	  height: 29px;
+	  cursor: pointer;
+	  background: url(../images/bg_orderexhibition.png) no-repeat center center;
+	}
+
+	#order-exhibition_long {
+	  display: inline-block;
+	  width: 130px;
+	  height: 28px;
+	  cursor: pointer;
+	  background: url(../images/bg_orderexhibition_long.png) no-repeat center center;
 	}
   }
 }
