--- a/css/index.css
+++ b/css/index.css
@@ -459,7 +459,8 @@ ul, li {
 #banner {
   position: relative;
   width: 100%;
-  height: 412px; }
+  height: 412px;
+  overflow: hidden; }
   #banner #title_panel {
     display: flex;
     justify-content: flex-start;
@@ -1223,7 +1224,7 @@ ul, li {
     color: #FFF;
     text-align: center;
     border-radius: 20px;
-    background: #ff0000;
+    background: #F00;
     background-size: 18px 16px;
     cursor: pointer; }
 
