--- a/css/index.scss
+++ b/css/index.scss
@@ -52,6 +52,7 @@
   position: relative;
   width: 100%;
   height: 412px;
+  overflow: hidden;
 
   #title_panel {
 	display: flex;
@@ -1098,7 +1099,7 @@
 	color: #FFF;
 	text-align: center;
 	border-radius: 20px;
-	background: #ff0000;
+	background: #F00;
 	background-size: 18px 16px;
 	cursor: pointer;
   }
