--- a/css/index.css
+++ b/css/index.css
@@ -1394,10 +1394,14 @@ ul, li {
   width: 70px;
   height: 70px;
   display: block;
-  background-size: cover;
   position: absolute;
   left: 0;
   top: 0;
+  background-size: contain;
+  background-position: center center;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  background-color: #FFF;
 }
 #person-info_panel .name,
 #company-info_panel .name {
