--- a/css/index.scss
+++ b/css/index.scss
@@ -1039,10 +1039,14 @@
 	width: 70px;
 	height: 70px;
 	display: block;
-	background-size: cover;
 	position: absolute;
 	left: 0;
 	top: 0;
+	background-size: contain;
+	background-position: center center;
+	background-repeat: no-repeat;
+	border-radius: 50%;
+	background-color: #FFF;
   }
 
   .name {
