--- a/css/index.scss
+++ b/css/index.scss
@@ -656,7 +656,7 @@
 
 	  .online_status {
 		background: linear-gradient(122.94deg, #B6C7DD 0%, #5F80AC 100%);
-		border-radius: 0px 10px 0px 30px;
+		border-radius: 0 10px 0 30px;
 
 		&.online {
 		  display: none;
@@ -1161,7 +1161,7 @@
 	  line-height: 25px;
 	  margin: 0 6px;
 	  color: #C9E5FF;
-	  text-shadow: 0 2px 0px rgba(0, 0, 0, 0.25);
+	  text-shadow: 0 2px 0 rgba(0, 0, 0, 0.25);
 	}
   }
 
@@ -1401,6 +1401,9 @@
 			border: 1px solid #DFDFDF;
 			border-top: 0;
 			border-bottom: 0;
+			#chat-function_menu {
+			  padding: 0 0 5px 0;
+			}
 		  }
 		}
 
