--- a/css/index.scss
+++ b/css/index.scss
@@ -1431,8 +1431,104 @@
 			padding: 30px;
 			overflow: auto;
 		  }
+
+		  .person-resume {
+			padding: 30px;
+			overflow: auto;
+			display: flex;
+			width: 100%;
+			.resume-detail {
+			  flex-grow: 1;
+			}
+		  }
 		}
 	  }
+	}
+  }
+}
+
+//简历详情
+.resume-detail {
+
+  .resume-detail_content {
+	font-size: 14px;
+	line-height: 25px;
+	color: #666;
+	padding-left: 22px;
+  }
+
+  .resume-detail_subtitle {
+	background: url(../images/icon_2dot@2x.png) no-repeat left center;
+	background-size: 14px 10px;
+	text-indent: 22px;
+	font-size: 16px;
+	color: #333;
+	font-weight: bold;
+	margin-top: 20px;
+	margin-bottom: 10px;
+  }
+
+  .photoLinkDsp {
+	width: 70px;
+	height: 70px;
+	background-size: cover;
+	border-radius: 50%;
+	background-position: center center;
+	background-repeat: no-repeat;
+	margin-right: 17px;
+	border: 4px solid #3333331f;
+	overflow: hidden;
+  }
+
+  .personName {
+	font-weight: bold;
+	font-size: 16px;
+	line-height: 20px;
+	color: #000000;
+	margin-right: 14px;
+  }
+
+  .personTypeDsp {
+	font-weight: bold;
+	font-size: 14px;
+	line-height: 20px;
+	color: #176EED;
+  }
+
+  .resume-detail_info {
+	flex-direction: column;
+	flex-grow: 1;
+	justify-content: space-between;
+	height: 70px;
+  }
+
+  .resume-other_info {
+	font-size: 14px;
+	color: #666666;
+	li:after {
+	  color:#C2C2C3;
+	  padding: 0px 0.2em;
+	}
+  }
+
+  .resume-detail_concat {
+	.mobilePhone {
+	  background:url(../images/icon_moble.png) no-repeat left center;
+	  background-size: 18px 18px;
+	  text-indent: 20px;
+	  margin-right: 20px;
+	}
+	.email {
+	  background:url(../images/icon_email.png) no-repeat left center;
+	  background-size: 18px 18px;
+	  text-indent: 20px;
+	  margin-right: 20px;
+	}
+	.currLocDsp {
+	  background:url(../images/icon_location.png) no-repeat left center;
+	  background-size: 18px 18px;
+	  text-indent: 20px;
+	  margin-right: 20px;
 	}
   }
 }
