--- a/css/index.scss
+++ b/css/index.scss
@@ -53,6 +53,8 @@
   width: 100%;
   height: 412px;
   overflow: hidden;
+  background-repeat: no-repeat;
+  background-position: center center;
 
   #title_panel {
 	display: flex;
