--- a/css/index.scss
+++ b/css/index.scss
@@ -1525,6 +1525,21 @@
 
 //简历详情
 .resume-detail {
+  position:relative;
+
+  .resume_download {
+	position: absolute;
+	width: 80px;
+	height: 24px;
+	line-height: 24px;
+	text-align: center;
+	border-radius: 5px;
+	background: #DDF3FF;
+	color: #166CEC;
+	font-size: 12px;
+	right: 0;
+	top: 0;
+  }
 
   .resume-detail_content {
 	font-size: 14px;
