--- a/css/index.scss
+++ b/css/index.scss
@@ -833,7 +833,7 @@
 }
 
 //职位详情
-#recruit-info {
+.recruit-info {
   .el-dialog {
 	background:      #FFF url(../images/bg_info_bottom.png) no-repeat bottom center;
 	background-size: contain;
