--- a/css/index.scss
+++ b/css/index.scss
@@ -1124,6 +1124,7 @@
 	background-size:     contain;
 	border:              2px solid #C7C4C4;
 	border-radius:       50%;
+	cursor:              pointer;
 	display:             block;
 	height:              68px;
 	left:                0;
